kubernetes/istio-configuration/virtualservice/apache-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apache-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - apache-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: apache-service.default.svc.cluster.local
