kubernetes/istio-configuration/virtualservice/product-frontend-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-frontend-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - product-gateway
  http:
  - match:
    - uri:
        prefix: /products
    rewrite:
      uri: /product-frontend-svc/products
    route:
    - destination:
        port:
          number: 8080
        host: product-frontend-service.default.svc.cluster.local
