kubernetes/istio-configuration/virtualservice/product-stock-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-stock-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - apache-gateway
  http:
  - match:
    - uri:
        prefix: /product-stock-svc/
    route:
    - destination:
        port:
          number: 8080
        host: product-stock-service.default.svc.cluster.local
