kubernetes/istio-configuration/virtualservice/product-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - apache-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: apache-service.default.svc.cluster.local
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        port:
          number: 8080
        host: product-frontend-service.default.svc.cluster.local
  - match:
    - uri:
        prefix: /api/products
    rewrite:
      uri: /products
    route:
    - destination:
        port:
          number: 8080
        host: product-orch-service.default.svc.cluster.local
